[add] ajuste de modal dealle aprobacion

--- a/src/app/compartidos/modal-detalles-aprobacion/modal-detalles-aprobacion.component.html
+++ b/src/app/compartidos/modal-detalles-aprobacion/modal-detalles-aprobacion.component.html
@@ -19,7 +19,7 @@
           </thead>
           <tbody>
             <tr>
-            <tr *ngFor="let detalle of detalleAprobacion">
+            <tr *ngFor="let detalle of aux_detalle_aprobacion">
               <td> {{ detalle.aprobador }} </td>
               <td> {{ detalle.estatus }} </td>
               <td> {{ detalle.comentario }} </td>
