[add] id en actualizar fecha programada pago

--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -12,7 +12,7 @@
         <h4 class="panel-title">Lista de Facturas</h4>
       </div>
       <div class="panel-body table-responsive">
-        <table id="tabla_acreedores_diversos" datatable [dtOptions]="dtOptions"
+        <table id="tabla_acreedores_diversos" datatable [dtOptions]="dtOptions" style="width: 100% !important;"
           class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
           <caption></caption>
           <thead>
