--- a/src/app/modulos/orden-compra/filtro-orden-compra/filtro-orden-compra.component.html
+++ b/src/app/modulos/orden-compra/filtro-orden-compra/filtro-orden-compra.component.html
@@ -62,7 +62,8 @@
         </div>
         <hr>
         <div class="text-right">
-          <input type="button" value="LIMPIAR CAMPOS" class="btn btn-primary btn-warning" (click)="lipiarCampos()">
+          <input type="button" value="LIMPIAR CAMPOS" class="btn btn-primary btn-warning" [disabled]="limpiar_disable"
+            (click)="lipiarCampos()">
           &nbsp;
           <input type="button" value="APLICAR FILTROS" [disabled]="!formulario.valid" class="btn btn-primary"
             (click)="actualizarTabla()">
