--- a/src/app/modulos/complemento-pago/modal-detalle-complemento-pago/modal-detalle-complemento-pago.component.html
+++ b/src/app/modulos/complemento-pago/modal-detalle-complemento-pago/modal-detalle-complemento-pago.component.html
@@ -74,7 +74,7 @@
                 <th scope="">Moneda</th>
                 <th scope="">Subtotal</th>
                 <th scope="">Total</th>
-                <th scope="">Documento</th>
+                <!-- <th scope="">Documento</th> -->
               </tr>
             </thead>
             <tbody>
@@ -86,8 +86,8 @@
                 <td> {{ detalle.moneda }} </td>
                 <td> {{ detalle.subtotal | currency: '$' }} </td>
                 <td> {{ detalle.total | currency: '$' }} </td>
-                <td *ngIf="detalle.pdf !== ''"> <a [href]="detalle.pdf" target="_blank" class="btn"> <em
-                      class="far fa-file-pdf"></em> </a> </td>
+                <!-- <td *ngIf="detalle.pdf !== ''"> <a [href]="detalle.pdf" target="_blank" class="btn"> <em
+                      class="far fa-file-pdf"></em> </a> </td> -->
               </tr>
             </tbody>
           </table>
