--- a/src/app/modulos/orden-compra/list-orden-compra-mx/list-orden-compra-mx.component.html
+++ b/src/app/modulos/orden-compra/list-orden-compra-mx/list-orden-compra-mx.component.html
@@ -69,6 +69,6 @@
   </div>
   <div>
     <app-modal-detalle-oc-mx [orden_oc]="documento.orden_compra"></app-modal-detalle-oc-mx>
-    <app-modal-docs-relacionados></app-modal-docs-relacionados>
+    <app-modal-docs-relacionados [docs_relacionados]="docs_relacionados"></app-modal-docs-relacionados>
   </div>
 </div>
