--- a/src/app/modulos/proveedores/list-proveedores-rci/list-proveedores-rci.component.html
+++ b/src/app/modulos/proveedores/list-proveedores-rci/list-proveedores-rci.component.html
@@ -21,6 +21,7 @@
         <table id="tabla_proveedores_rci" datatable [dtOptions]="dtOptions"
           class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
           width="100%" style="max-width: 100%; ">
+          <caption></caption>
           <!-- <thead>
             <tr>
               <th>Nombre</th>
