[add] ajuste de revisar el sistema

--- a/src/app/modulos/prestaciones/list-prestaciones-rci/list-prestaciones-rci.component.html
+++ b/src/app/modulos/prestaciones/list-prestaciones-rci/list-prestaciones-rci.component.html
@@ -13,7 +13,9 @@
       </div>
       <div class="panel-body table-responsive">
         <table id="tabla_prestacion_rci"
-          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody">
+          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
+          style="max-width: 100%;" width="100%">
+          <caption></caption>
           <thead>
             <tr>
               <th>Nombre</th>
