[add] ajuste de modales en comprobacion de gastos

--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -52,7 +52,8 @@
         </table>
         <div class="row text-right">
           <div class="col-md-12 ">
-            <button class="btn btn-warning ml-auto" style="float: right;" (click)="onCancelar.emit()"> Regresar</button>
+            <button class="btn btn-warning ml-auto mb-2" style="float: right;" (click)="onCancelar.emit()">
+              Regresar</button>
             <button class="btn btn-danger ml-automt-2" style="float: right;" (click)="onEliminarComprobacion.emit()">
               Eliminar
               Comprobación</button>
