--- a/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
+++ b/src/app/compartidos/comprobacion-components/carga-comprobante-nacional/carga-comprobante-nacional.component.html
@@ -35,7 +35,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-12">
+    <div class="col-12 mb-2">
       <button (click)="obtenerComprobante()" class="btn btn-primary" [disabled]="formulario.invalid">
         Validar
       </button>
