--- a/src/app/compartidos/modal-detalle-factura/modal-detalle-factura.component.html
+++ b/src/app/compartidos/modal-detalle-factura/modal-detalle-factura.component.html
@@ -1,84 +1,35 @@
-<div class="modal fade " id="modal_detalle" role="dialog" aria-labelledby="ModalLabel" aria-hidden="true"
-  style="max-width:100%;">
-  <div class=" modal-dialog modal-lg" role="document">
+<!-- Modal -->
+<div class="modal fade" id="modal_detalle" tabindex="-1" role="dialog" aria-labelledby="modal_detalle"
+  aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title p-b-15" id="ModalLabel">Modal de Anexos</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <h5 class="modal-title" id="exampleModalLabel"> Agregar Anexo </h5>
+        <button #btn_cerrar type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-
       <div class="modal-body">
         <div class="row">
-          <div class="col-md-12">
-            <div class="panel panel-inverse">
-              <div class="panel-heading">
-                <h4 class="panel-title">Lista - Anexos</h4>
-              </div>
-              <div class="table-responsive">
-                <table id="tabla_detalle_factura" class="table" width="100%" style="max-width: 100%;">
-                  <caption></caption>
-                  <thead>
-                    <tr>
-                      <th scope="col">id</th>
-                      <th scope="col">linea</th>
-                      <th scope="col">Cantidad</th>
-                      <th scope="col">Descripción</th>
-                      <th style="white-space: nowrap" scope="col">Valor Unitario</th>
-                      <th scope="col">Unidad</th>
-                      <th scope="col">Importe</th>
-                      <th scope="col">Concepto</th>
-                      <th style="white-space: nowrap" scope="col">Monto a Reembolsar</th>
-                      <th style="white-space: nowrap" scope="col">Comprobante Fiscal</th>
-                      <th scope="col">Impuestos</th>
-                      <th scope="col">Anexos</th>
-                      <th scope="col">Adicional</th>
-                      <th style="white-space: nowrap" scope="col">No aplica</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr class="gradeU" *ngFor="let factura of list_detalle_factura; let i = index">
-                      <td>{{i + 1}}</td>
-                      <td>{{factura.linea}}</td>
-                      <td>{{factura.cantidad}}</td>
-                      <td>{{factura.descripcion}}</td>
-                      <td>{{factura.valor_unitario | currency}}</td>
-                      <td>{{factura.unidad}}</td>
-                      <td>{{factura.importe}}</td>
-                      <td>{{factura.concepto }}</td>
-                      <td class="text-center" style="white-space: nowrap" scope="">
-                        <label><small>monto</small></label>
-                        <input type="text" class="form-control" name="monto" [(ngModel)]="factura.monto">
-                      </td>
-                      <td scope="">
-                        <div>
-                          <input type="checkbox">
-                        </div>
-                      </td>
-                      <td>
-                        <div class="text-center">
-                          <a><em class="fas fa-percentage" style="font-size: 20px;"></em></a>
-                        </div>
-                      </td>
-                      <td>
-                        <button><em class="fas fa-folder"></em></button>
-                      </td>
-                      <td>
-                        <button><em class="fas fa-file-archive"></em></button>
-                      </td>
-                      <td>
-                        <div>
-                          <input type="checkbox">
-                        </div>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+          <div class="form-group col-12">
+            <label>Archivo <span class="requerido">*</span> </label>
+            <div class="input-group input-file" name="xml_nc">
+              <span class="input-group-btn">
+                <label class="btn btn-block btn-primary">Archivo
+                  <input #input_pdf for="archivo" accept="*.*" type="file" style="display: none;"
+                    (change)="cargarArchivo( input_pdf, input_pdf_txt, 'pdf')">
+                </label>
+              </span>
+              <input #input_pdf_txt type="text" disabled class="form-control" placeholder='' id="archivo"
+                name="archivo" />
             </div>
           </div>
         </div>
+      </div>
+      <div class="modal-footer">
+        <button #btn_close type="button" class="btn btn-danger" (click)="cerrarModal()">Cerrar</button>
+        <button #btn_actualizar type="button" class="btn btn-primary" [disabled]="archivo == ''"
+          (click)="actualizarDoc()">Guardar</button>
       </div>
     </div>
   </div>
