--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -75,19 +75,19 @@
                 <button class="btn btn-primary ml-2"><i class="fas fa-file-upload"></i>
                 </button>
               </td>
-              <td>
+              <td class="align-middle">
                 <div style="white-space: nowrap">
                   <a *ngIf="item.pdf !== '' " target="_blank" [href]="item.pdf" class="btn"> <i class="far fa-file-pdf"
                       style="font-size:15px"></i> </a>
                   <a *ngIf="item.xml !== '' " target="_blank" [href]="item.xml" class="btn ml-2"> <i
                       class="far fa-file-code" style="font-size:15px"></i> </a>
-                  <i *ngIf="item.xml && item.xml != ''" class="btn ml-2" style="font-size:15px"
-                    (click)="mostrarInterprete($event.target, item.folio_fiscal)" class="fas fa-eye mr-1"></i>
+                  <i *ngIf="item.xml && item.xml != ''" style="font-size:15px"
+                    (click)="mostrarInterprete($event.target, item.folio_fiscal)" class="fas fa-eye btn m-2"></i>
                   <button class="btn ml-2" (click)="mostrarModal(item.documento_id, item.folio_fiscal)"><i
                       class="fas fa-file mr-1"></i>Actualizar PDF </button>
                 </div>
               </td>
-              <td class="no-wraptext" *ngIf="usuario.aprobador">
+              <td class="no-wraptext align-middle" *ngIf="usuario.aprobador">
                 <ng-container *ngIf="true">
                   <button #button_aprobar *ngIf="item.aprobacion == 1"
                     (click)="aprobar(button_aprobar, item.id, item.documento_id, item)" class="btn btn-info ml-2"><i
