--- a/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
+++ b/src/app/modulos/notas-credito/list-notas-credito-rci/list-notas-credito-rci.component.html
@@ -61,7 +61,7 @@
                 <button class="btn btn-primary ml-2"><i class="fas fa-file-upload"></i>
                 </button>
               </td>
-              <td>
+              <td class="align-middle">
                 <div style="white-space: nowrap">
                   <a *ngIf="item.pdf !== '' " target="_blank" [href]="item.pdf" class="btn"> <i class="far fa-file-pdf"
                       style="font-size:15px"></i> </a>
@@ -77,7 +77,7 @@
                 <button *ngIf="(item.numero_nivel === 2)" class="btn btn-primary" (click)="editaNotaCredito(item)">
                   Editar </button>
               </td>
-              <td class="no-wraptext" *ngIf="usuario.aprobador">
+              <td class="no-wraptext align-middle" *ngIf="usuario.aprobador">
                 <ng-container *ngIf="item.aprobacion == 1">
                   <button (click)="aprobar( item.id, item.documento_id)" class="btn btn-info ml-2">
                     <i class="far fa-check-circle"></i>
