--- a/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
+++ b/src/app/modulos/facturas-proveedor/list-facturas-proveedor-mx/list-facturas-proveedor-mx.component.html
@@ -32,8 +32,8 @@
               <th scope="" class="align-middle">Tipo de Documento</th>
               <th scope="" class="align-middle">Detalles</th>
               <th scope="" *ngIf="usuario.acreedor"> Cargar NC </th>
-              <th scope="" class="align-middle"> Documentos </th>
-              <th scope="" *ngIf="usuario.aprobador"> Aprobación </th>
+              <th scope="" class="align-middle text-center"> Documentos </th>
+              <th scope="" class="align-middle text-center" *ngIf="usuario.aprobador"> Aprobación </th>
               <!-- <th scope=""> Validación </th> -->
             </tr>
           </thead>
