--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -1,27 +1,44 @@
 <div class="row">
-  <div class="col-md-9">
-    <table class="table">
+  <div class="col-md-9 table-responsive">
+    <table class="table hover table-striped table-hover table-fixed dataTables_scrollBody">
       <caption></caption>
       <thead>
         <tr>
-          <th scope="col">UUID</th>
+          <th scope="col">Estatus</th>
+          <th scope="col">Fecha</th>
+          <th scope="col">Forma de Pago</th>
+          <th scope="col">Razón Social</th>
           <th scope="col">Concepto</th>
-          <th scope="col">Cuenta</th>
-          <th scope="col">Monto</th>
-          <th scope="col">Aplica</th>
-          <th scope="col">Fecha Comprobante</th>
+          <th scope="col">Moneda del Comprobante</th>
+          <th scope="col">Monto a Reembolsar</th>
+          <th scope="col">Documentos</th>
+          <th scope="col">Comprobante</th>
           <th scope="col">Eliminar</th>
         </tr>
       </thead>
       <tbody>
         <ng-container *ngFor="let item of lista_comprobaciones; let i=index">
           <tr *ngFor="let concepto of item.conceptos; let e=index">
-            <td>{{ item.uuid }}</td>
-            <td>{{ concepto.descripcion }} </td>
-            <td>{{ concepto.cuenta }} </td>
-            <td>{{ concepto.importe | currency: '$' }} </td>
-            <td>{{ concepto.aplica ? 'Si' : 'No' }} </td>
+            <td>{{ item.estatus }}</td>
             <td>{{ item.fecha_comprobante | date: 'yyyy-MM-dd' }} </td>
+            <td>{{ item.forma_pago }} </td>
+            <td>{{ item.razon_social }} </td>
+            <td>{{item.concepto_gasto}} </td>
+            <td>{{item.moneda}} </td>
+            <td>{{item.importe_reembolso}} </td>
+            <td class="align-middle">
+              <div style="white-space: nowrap">
+                <a *ngIf="item.file !== '' " class="btn ml-2"> <i class="far fa-file-code" style="font-size:15px"></i>
+                </a>
+                <a *ngIf="item.pdf !== '' " target="_blank" [href]="item.pdf" class="btn"> <i class="far fa-file-pdf"
+                    style="font-size:15px"></i> </a>
+                <i style="font-size:15px" class="far fa-folder btn m-2"></i>
+              </div>
+            </td>
+            <td>
+              <button class="btn btn-primary ml-2"><i class="fas fa-file-upload"></i>
+              </button>
+            </td>
             <td><em class="fas fa-trash" (click)="eliminarConcepto(i)"></em></td>
           </tr>
         </ng-container>
