[add] ajuste de de comprobacion de gastos

--- a/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
+++ b/src/app/compartidos/comprobacion-components/tabla-conceptos-form/tabla-conceptos-form.component.html
@@ -19,6 +19,7 @@
           <th scope="col">Importe</th>
           <th style="width: 250px;" scope="col">Concepto</th>
           <th scope="col">Monto a Reembolsar</th>
+          <th style="width: 250px;" scope="col">Observación</th>
           <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
@@ -52,21 +53,25 @@
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="monto_rembolsar"
               type="text" name="linea_detalle" maxlength="20" class="form-control">
           </th>
+          <th class="text-right" scope="">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="500"
+              name="linea_detalle" formControlName="observacion" style="width: 150px !important;"></textarea>
+          </th>
           <th class="text-center" scope="">
             <input type="checkbox" class="mx-auto" formControlName="comprobante_fiscal">
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary" (click)="modal('impuestos', i)">
+            <button class="btn btn-primary btn-sm" (click)="modal('impuestos', i)">
               <em class="fa fa-percent"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary" (click)="modal('detalle')">
+            <button class="btn btn-primary btn-sm" (click)="modal('detalle')">
               <em class="fa fa-file"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary" (click)="modal('adicionales')">
+            <button class="btn btn-primary btn-sm" (click)="modal('adicionales')">
               <em class="fa fa-file-archive"></em>
             </button>
           </th>
