--- a/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
+++ b/src/app/compartidos/comprobacion-components/lista-comprobantes-carga/lista-comprobantes-carga.component.html
@@ -35,11 +35,12 @@
                 <i style="font-size:15px" class="far fa-folder btn m-2"></i>
               </div>
             </td>
-            <td>
-              <button class="btn btn-primary ml-2"><i class="fas fa-file-upload"></i>
-              </button>
+            <td class="align-middle">
+              <i style="font-size:15px" class="far fa-file-alt btn m-2"></i>
             </td>
-            <td><em class="fas fa-trash" (click)="eliminarConcepto(i)"></em></td>
+            <td class="align-middle">
+              <em style="font-size:15px" class="fas fa-trash" (click)="eliminarConcepto(i)"></em>
+            </td>
           </tr>
         </ng-container>
 
