--- a/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
+++ b/src/app/compartidos/comprobacion-components/row-concepto-extranjero/row-concepto-extranjero.component.html
@@ -20,6 +20,8 @@
           <th scope="col">Importe</th>
           <th style="width: 250px;" scope="col">Concepto</th>
           <th scope="col">Monto a Reembolsar</th>
+          <th style="width: 250px;" scope="col">Observación</th>
+          <th scope="col">Comprobante Fiscal</th>
           <th scope="col">Impuestos</th>
           <th scope="col">Anexos</th>
           <th scope="col">Adicional</th>
@@ -29,14 +31,16 @@
       <tbody>
         <tr>
           <th scope="">
-            <input formControlName="descripcion" type="text" name="descripcion" maxlength="250" class="form-control">
+            <input formControlName="descripcion" type="text" name="descripcion" maxlength="250" class="form-control"
+              style="width: 100px !important;">
           </th>
           <th scope="">
             <input formControlName="unidad" type="text" name="unidad" maxlength="50" class="form-control">
           </th>
           <th class="text-right" scope="">
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" (keyup)="calcularImporte()"
-              formControlName="valorUnitario" type="text" name="valorUnitario" maxlength="20" class="form-control">
+              formControlName="valorUnitario" type="text" name="valorUnitario" maxlength="20" class="form-control"
+              style="width: 100px !important;">
           </th>
           <th scope="" class="text-center">
             <input appNumbersOnly formControlName="cantidad" (keyup)="calcularImporte()" type="text" name="cantidad"
@@ -44,7 +48,7 @@
           </th>
           <th class="text-right" scope="">
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="importe" type="text"
-              name="importe" maxlength="20" class="form-control" disabled>
+              name="importe" maxlength="20" class="form-control" disabled style="width: 70px !important;">
           </th>
           <th scope="">
             <select2 [data]="lista_cuentas" [options]="{placeholder: 'Seleccione Concepto... '}"
@@ -54,21 +58,28 @@
           </th>
           <th class="text-right" scope="">
             <input currencyMask [options]="{ thousands: ',', decimal: '.' }" formControlName="monto_rembolsar"
-              type="text" name="linea_detalle" maxlength="20" class="form-control"
+              type="text" name="linea_detalle" maxlength="20" class="form-control" style="width: 100px !important;"
               (keyup)="cambiarEstatusTotalModificado()">
           </th>
+          <th class="text-right" scope="">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" maxlength="500"
+              name="linea_detalle" formControlName="observacion" style="width: 150px !important;"></textarea>
+          </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary" (click)="modal('impuestos')">
+            <input type="checkbox" class="mx-auto" formControlName="comprobante_fiscal">
+          </th>
+          <th class="text-center" scope="">
+            <button class="btn btn-primary btn-sm" (click)="modal('impuestos')">
               <em class="fa fa-percent"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary" (click)="modal('detalle')">
+            <button class="btn btn-primary btn-sm" (click)="modal('detalle')">
               <em class="fa fa-file"></em>
             </button>
           </th>
           <th class="text-center" scope="">
-            <button class="btn btn-primary" (click)="modal('adicionales')">
+            <button class="btn btn-primary btn-sm" (click)="modal('adicionales')">
               <em class="fa fa-file-archive"></em>
             </button>
           </th>
