[upd] ocultar folio en factura extanjero

--- a/src/app/modulos/notas-credito/modal-detalle-notas-credito/modal-detalle-notas-credito.component.html
+++ b/src/app/modulos/notas-credito/modal-detalle-notas-credito/modal-detalle-notas-credito.component.html
@@ -60,6 +60,16 @@
               </label>
               {{ data.total | currency: '$' }}
             </div>
+            <div *ngIf="data.site" class="col-sm-6 col-md-4">
+              <label for="">Site:</label>
+              {{ data.site }}
+            </div>
+            <div *ngIf="data.cuenta_contable" class="col-sm-6 col-md-4">
+              <label for="">
+                Cuenta Contable:
+              </label>
+              {{ data.cuenta_contable }}
+            </div>
           </div>
 
           <table id="tabla_documentos table-responsive"
