[add] ajuste de tamaño modal aprobacion

--- a/src/app/compartidos/modal-detalles-aprobacion/modal-detalles-aprobacion.component.html
+++ b/src/app/compartidos/modal-detalles-aprobacion/modal-detalles-aprobacion.component.html
@@ -5,9 +5,9 @@
       <div class="modal-header">
         <h4 class="modal-title p-b-15" id="ModalLabel">Aprobación </h4>
       </div>
-      <div class="modal-body">
-        <table id="tabla_documentos table-responsive"
-          class="row-border hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
+      <div class="modal-body table-tamaño">
+        <table id="tabla_documentos"
+          class="row-border table-responsive hover table table-striped table-bordered table-hover table-fixed dataTables_scrollBody"
           width="100%" style="max-width: 100%; ">
           <thead>
             <tr>
