--- a/src/app/compartidos/modal-detalles-aprobacion/modal-detalles-aprobacion.component.css
+++ b/src/app/compartidos/modal-detalles-aprobacion/modal-detalles-aprobacion.component.css
@@ -1,3 +1,11 @@
 .ajustar {
   word-break: break-all;
 }
+@media screen and (min-height: 500px){
+  .table-tamaño {
+    position: relative;
+    overflow-y: auto;
+    height: 45vh;
+  }
+}
+
